src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Allow_edits_by_community_users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow edits by community users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <label>Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Visits_6_months__c</fullName>
        <label>Average Visits (6 months)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Profile__c</fullName>
        <label>Bank Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moneycenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bounce_Rate_Growth__c</fullName>
        <label>Bounce Rate Growth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bounce_Rate__c</fullName>
        <label>Bounce Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CB_Rank_Company__c</fullName>
        <label>CB Rank (Company)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CapTableLink__c</fullName>
        <formula>HYPERLINK(&apos;/one/one.app#/alohaRedirect/apex/CapTableVF?targetAccountId=&apos; +  Id , &apos;Cap Table&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CapTableLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Owner__c</fullName>
        <label>Company Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deck_Date__c</fullName>
        <label>Deck Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deck_Type__c</fullName>
        <label>Deck Type</label>
        <picklist>
            <picklistValues>
                <fullName>PDF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hardcopy</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Delisted_Date__c</fullName>
        <label>Delisted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Founded_Date__c</fullName>
        <label>Founded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullDigitId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullDigitId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Status__c</fullName>
        <label>Fund Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualifying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <label>Funding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Early Stage Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Stage Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Traffic_Rank__c</fullName>
        <label>Global Traffic Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headquarters_Location_City__c</fullName>
        <description>Now using Shipping City for this data. Data was migrated to that field before marking this field read only.</description>
        <label>Headquarters Location City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarters_Location_Country__c</fullName>
        <description>Now using Shipping Country for this data. Data was migrated to that field before marking this field read only.</description>
        <label>Headquarters Location Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarters_Location_State__c</fullName>
        <description>Now using Shipping State for this data. Data was migrated to that field before marking this field read only.</description>
        <label>Headquarters Location State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPO_Date__c</fullName>
        <label>IPO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPO_Status__c</fullName>
        <label>IPO Status</label>
        <picklist>
            <picklistValues>
                <fullName>Delisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Technical_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Technical Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investor_Type__c</fullName>
        <label>Investor Type</label>
        <picklist>
            <picklistValues>
                <fullName>HNW individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Commitment_Stage__c</fullName>
        <label>Last Commitment Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Equity_Funding_Amount__c</fullName>
        <label>Last Equity Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Equity_Funding_Type__c</fullName>
        <label>Last Equity Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convertible Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Crowdfunding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Coin Offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-equity Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-IPO Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-IPO Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Crowdfunding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undiscolosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture - Series Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Funding_Amount__c</fullName>
        <label>Last Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Funding_Date__c</fullName>
        <label>Last Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Funding_Type__c</fullName>
        <label>Last Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convertible Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Crowdfunding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Coin Offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-equity Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-IPO Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-IPO Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Crowdfunding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undiscolosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture - Series Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Money_Raised_at_IPO__c</fullName>
        <label>Money Raised at IPO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rank_Change__c</fullName>
        <label>Monthly Rank Change (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Rank_Growth__c</fullName>
        <label>Monthly Rank Growth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Visits_Growth__c</fullName>
        <label>Monthly Visits Growth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Visits__c</fullName>
        <label>Monthly Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Num_Rounds__c</fullName>
        <label>Num Series</label>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Apps__c</fullName>
        <label>Number of Apps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001-5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5001-10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10001+</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Founders__c</fullName>
        <label>Number of Founders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Funding_Rounds__c</fullName>
        <label>Number of Funding Series</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Investors__c</fullName>
        <label>Number of Investors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Lead_Investors__c</fullName>
        <label>Number of Lead Investors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Name_URL__c</fullName>
        <label>Organization Name URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PPM_Date__c</fullName>
        <label>PPM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPM_Receipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPM Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPM_Type__c</fullName>
        <label>PPM Type</label>
        <picklist>
            <picklistValues>
                <fullName>PDF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hardcopy</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Page_Views_Visit_Growth__c</fullName>
        <label>Page Views / Visit Growth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Page_Views_Visit__c</fullName>
        <label>Page Views / Visit</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <label>PhotoUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who company was referred by</description>
        <label>Referred by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBIC_Priority__c</fullName>
        <label>SBIC Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Exchange__c</fullName>
        <label>Stock Exchange</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Symbol_URL__c</fullName>
        <label>Stock Symbol URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stock_Symbol__c</fullName>
        <label>Stock Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Commitment__c</fullName>
        <label>Target Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dollars_Across_Rounds__c</fullName>
        <label>Total Dollars Across Series</label>
        <summarizedField>Round__c.Total_Committed__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Downloads__c</fullName>
        <label>Total Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Equity_Funding_Amount__c</fullName>
        <label>Total Equity Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Funding_Amount__c</fullName>
        <label>Total Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Investment__c</fullName>
        <label>Total Investment</label>
        <summarizedField>Round__c.Total_Round__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_NonVoting_Shares_Across_Series__c</fullName>
        <label>Total NonVoting Shares Across Series</label>
        <summarizedField>Round__c.Total_Committed_NonVoting_Shares__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Shares_Across_Rounds__c</fullName>
        <label>Total Voting Shares Across Series</label>
        <summarizedField>Round__c.Total_Invest_Shares__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sum_Shares_Across_Series__c</fullName>
        <label>Total Sum Shares Across Series</label>
        <summarizedField>Round__c.Total_Committed_Sum_Shares__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_Google_to_Geocode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, the Account&apos;s Shipping Address will be geocoded using the Google Maps API. Due to cost, this should be used as a secondary means of geocoding records that Salesforce won&apos;t due to missing Shipping Street and Postal Code values.</description>
        <label>Use Google to Geocode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valuation_at_IPO__c</fullName>
        <label>Valuation at IPO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visit_Duration_Growth__c</fullName>
        <label>Visit Duration Growth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Visit_Duration__c</fullName>
        <label>Visit Duration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>nunde</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Investor</value>
        </filters>
        <label>Active Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CB_Rank_Company__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>Last_Funding_Type__c</columns>
        <columns>Last_Equity_Funding_Type__c</columns>
        <columns>PhoneNumber__c</columns>
        <columns>Contact_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Fintech</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>FinTech_Prospect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.prospect</value>
        </filters>
        <label>FinTech Prospect</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Portfolio_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portfolio_Company__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Portfolio Companies</label>
    </listViews>
    <listViews>
        <fullName>TargetAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.prospect</value>
        </filters>
        <label>TargetAccounts</label>
    </listViews>
    <recordTypes>
        <fullName>All</fullName>
        <active>true</active>
        <label>All</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bank_LP</fullName>
        <active>true</active>
        <description>A bank investing in the SBIC</description>
        <label>Bank</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investor</fullName>
        <active>true</active>
        <description>A company that can invest in a round.</description>
        <label>Investor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Limited_Partner</fullName>
        <active>true</active>
        <description>LP that investing in the Fund</description>
        <label>Limited Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <description>A company that is a partner in assisting the business (i.e. Lawyers, IT, etc.).</description>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portfolio_Company</fullName>
        <active>true</active>
        <description>A FinTech company in which Canapi is on the Cap-Table.</description>
        <label>Portfolio Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Target</fullName>
        <active>true</active>
        <description>A company that can be targeted or part of the portfolio</description>
        <label>Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>prospect</fullName>
        <active>true</active>
        <label>Fintech</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>